Fixed section height on mobile screen

--- a/assets/styles/layout/_sections.scss
+++ b/assets/styles/layout/_sections.scss
@@ -11,7 +11,7 @@
     @include flexCentering();
 
     &[data-name="hero"] {
-      padding-block-start: calc(var(--padding-block) * 1.5);
+      padding-block-start: calc(var(--padding-block) * 4);
     }
   }
 }
